Fix bug 143032: Kopete crashes with SIGSEGV when launched with aim quasi-url

Also fix the same crash in ICQ and crash when account is offline.
Add error messages to improve error feedback.

BUG: 143032


svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=643048