protocols/oscar/icq/icqprotocol.cpp
@@ -112,17 +112,6 @@ void ICQProtocolHandler::handleURL(const QString &mimeType, const KURL & url) co
 	{
 		QDictIterator<Kopete::Account> it(accounts);
 		account = it.current();
-		QString nickuin = nick.isEmpty() ?
-			i18n("'%1'").arg(uin) :
-			i18n("'%1' (%2)").arg(nick, uin);
-
-		if (KMessageBox::questionYesNo(Kopete::UI::Global::mainWidget(),
-		                               i18n("Do you want to add %1 to your contact list?").arg(nickuin), QString::null, i18n("Add"), i18n("Do Not Add"))
-			!= KMessageBox::Yes)
-		{
-			kdDebug(14153) << k_funcinfo << "Cancelled" << endl;
-			return;
-		}
 	}
 	else
 	{
@@ -134,7 +123,7 @@ void ICQProtocolHandler::handleURL(const QString &mimeType, const KURL & url) co
 		chooser->setMainWidget(accSelector);
 
 		int ret = chooser->exec();
-		Kopete::Account *account = accSelector->selectedItem();
+		account = accSelector->selectedItem();
 
 		delete chooser;
 		if (ret == QDialog::Rejected || account == 0)
@@ -144,6 +133,24 @@ void ICQProtocolHandler::handleURL(const QString &mimeType, const KURL & url) co
 		}
 	}
 
+	if (!account->isConnected())
+	{
+		kdDebug(14153) << k_funcinfo << "Can't add contact, we are offline!" << endl;
+		KMessageBox::sorry( Kopete::UI::Global::mainWidget(), i18n("You must be online to add a contact."), i18n("ICQ") );
+		return;
+	}
+
+	QString nickuin = nick.isEmpty() ?
+		i18n("'%1'").arg(uin) :
+		i18n("'%1' (%2)").arg(nick, uin);
+
+	if (KMessageBox::questionYesNo(Kopete::UI::Global::mainWidget(),
+	                               i18n("Do you want to add %1 to your contact list?").arg(nickuin), QString::null, i18n("Add"), i18n("Do Not Add"))
+	    != KMessageBox::Yes)
+	{
+		kdDebug(14153) << k_funcinfo << "Cancelled" << endl;
+		return;
+	}
 
 	kdDebug(14153) << k_funcinfo <<
 		"Adding Contact; uin = " << uin << ", nick = '" << nick <<
